# line_chtbt

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  from google.py  hugging_face_download.py  pyproject.toml  qa_chatbot.py  qa_chatbot_local.py  qa_chatbot_local_llm.py  qa_lms_chatbot.py  requirements.txt  requirements_poetry.txt  vector_load_test.py  vector_n_embed.py  webhook_flask_srvr.py
templates/: index.html
